zb-spring-template/caas-config/microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
      k8s-app: zb-spring-template
  name: zb-spring-template
  namespace: zb-spring-template
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: zb-spring-template
  type: LoadBalancer
