zb-spring-template/caas-config/microservice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zb-spring-template
spec:
  rules:
    - host: zb-spring-template.@ingress_env@.swissre.com
      http:
        paths:
          - path: /
            backend:
              serviceName: zb-spring-template
              servicePort: 80
